--- a/scss/utils/_mixins.scss
+++ b/scss/utils/_mixins.scss
@@ -15,23 +15,21 @@
     align-items: center;
 }
 @mixin btn {
+    font-family: inherit;
     padding: 20px;
     border: none;
     border-radius: 30px;
     background: linear-gradient(175deg, $color-secondary 0%, $color-primary 100%);
     box-shadow: 0 0 11px rgba(0, 0, 0, 0.3);
     transition: 0.2s ease-in-out;
+    color: #fff;
     cursor: pointer;
     &:hover {
         opacity: 0.8;
     box-shadow: 0 0 11px rgba(0, 0, 0, 0.9);
 
     }
-    // &--full-width {
-    //     width: 100%;
-    //     margin: 0 auto;
+    // a {
+    //     color: #fff;
     // }
-    a {
-        color: #fff;
-    }
 }
