--- a/scss/layout/_menu.scss
+++ b/scss/layout/_menu.scss
@@ -1,160 +1,4 @@
-// .menu--img {
-//     width: 100%;
-//     height: 50vh;
-//     img {
-//         margin-top: -80px;
-//         width: 100%;
-//         height: 100%;
-//         object-fit: cover;
-//     }
-// }
-// .menu {
-//     padding: 20px 20px 70px 20px;
-//     background-color: #f4f4f4;
-//     position: relative;
-//     border-radius: 32px 32px 0 0;
-//     margin-top: -200px;
-//     @media screen and (min-width: 1025px) {
-//         width: 80%;
-//         margin: -164px auto 0;
-//     }
-//     section {
-//         margin-bottom: 45px;
-//     }
-//     &__header {
-//         display: flex;
-//         justify-content: space-between;
-//         margin: 17px 0;
-//         h2{
-//             font-family: "Shrikhand";
-//             font-size: 27px;
-//         }
-//         &__heart {
-//             position: absolute;
-//             right: 35px;
-//             font-size: 25px;
-//         }
-//     }
-//     &__title--categorie {
-//         position: relative;
-//         font-size: 16px;
-//         margin-bottom: 20px;
-//         padding-left: 7px;
-//         font-weight: 400;
-//         &::before {
-//             content: "";
-//             position: absolute;
-//             width: 50px;
-//             height: 3px;
-//             background: $color-tertiary;
-//             left: 7px;
-//             bottom: -7px;
-//         }
-//     }
-//     .box-list {
-//         display: flex;
-//         flex-direction: column;
-//         row-gap: 15px;
-//         @media screen and (min-width: 768px) {
-//             display: flex;
-//             flex-flow: row wrap;
-//             column-gap: 15px;
-//         }
-//     }
-//     .box {
-//         display: flex;
-//         border-radius: 15px;
-//         max-width: 100%;
-//         cursor: pointer;
-//         background-color: #fff;
-//         animation: revealAnimation 1s cubic-bezier(0.5, 0, 0, 1) forwards;
-//         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-//         overflow: hidden;
-//         opacity: 0;
-//         @media screen and (min-width: 768px) {
-//             width: 48%;
-//         }
-//         @media screen and (min-width: 1025px) {
-//             width: calc(96% / 3);
-//         }
-//         &__container {
-//             display: flex;
-//             flex: 1;
-//             overflow: hidden;
-//             justify-content: space-between;
-//             padding: 15px;
-//         }
-//         &__content {
-//             overflow: hidden;
-//             h3 {
-//                 // white-space: nowrap;
-//                 // text-overflow: ellipsis;
-//                 overflow: hidden;
-//             }
-//             p {
-//                 white-space: nowrap;
-//                 text-overflow: ellipsis;
-//                 overflow: hidden;
-//                 margin-top: 7px;
-//             }
-//         }
-//         .price {
-//             font-weight: bold;
-//             display: flex;
-//             justify-content: flex-end;
-//             align-items: flex-end;
-//             padding-left: 5px;
-//         }
-//         .check {
-//             background-color: $color-tertiary;
-//             @include center_element;
-//             border-radius: 0 15px 15px 0;
-//             margin: -16px -80px -16px 16px;
-//             width: 64px;
-//             transition-duration: 0.5s;
-//             i {
-//                 border-radius: 50%;
-//                 color: $color-tertiary;
-//                 background-color: #fff;
-//                 padding: 5px;
-//                 &::before {
-//                     font-size: 16px;
-//                 }
-//             }
-//         }
-//         // animation check
-//         &:hover {
-//             transition-duration: 0.5s;
-//             .check {
-//                 margin-right: 0;
-//                 display: block;
-//                 transition-duration: 0.5s;
-//                 @include center_element;
-//                 i {
-//                     animation: animate 0.5s ease-in-out;
-//                 }
-//             }
-//         }
-//     }
-//     &__btn {
-//         @include center_element;
-//         a {
-//             padding: 30px;
-//         }
-//     }
-// }
-
-// @media (prefers-reduced-motion: reduce) {
-//     .box {
-//         animation: none !important;
-//     }
-// }
-// @for $i from 1 to 11 {
-//     .box.delay-#{$i} {
-//         animation-delay: #{$i * 0.1}s;
-//     }
-// }
-
+// image restraurant
 .menu--img {
     width: 100%;
     height: 487.5px;
@@ -165,6 +9,7 @@
         object-fit: cover;
     }
 }
+
 .menu {
     padding: 20px 20px 70px 20px;
     background-color: #f4f4f4;
@@ -314,12 +159,14 @@
         }
     }
 }
-
+// reduce animation
 @media (prefers-reduced-motion: reduce) {
     .box {
         animation: none !important;
     }
 }
+
+// handle delay animation
 @for $i from 1 to 11 {
     .box.delay-#{$i} {
         animation-delay: #{$i * 0.1}s;
