--- a/scss/layout/_menu.scss
+++ b/scss/layout/_menu.scss
@@ -40,6 +40,7 @@
         display: flex;
         justify-content: space-between;
         margin: 17px 0;
+        align-items: center;
         h2 {
             font-family: "Shrikhand";
             font-size: 27px;
